# ChangeLog for sys-apps/razercfg
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/razercfg/ChangeLog,v 1.29 2014/10/09 12:12:17 joker Exp $

*razercfg-0.30 (09 Oct 2014)

  09 Oct 2014; Christian Birchinger <joker@gentoo.org> +razercfg-0.30.ebuild:
  Version bump

  14 Aug 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> razercfg-0.23.ebuild:
  x86 stable wrt bug #513744

*razercfg-0.29 (07 Aug 2014)

  07 Aug 2014; Christian Birchinger <joker@gentoo.org> +razercfg-0.29.ebuild:
  Version bump

  20 Jun 2014; Christian Birchinger <joker@gentoo.org> razercfg-0.26.ebuild:
  Change the Python interpreter detection.

*razercfg-0.26 (20 Jun 2014)

  20 Jun 2014; Christian Birchinger <joker@gentoo.org> +razercfg-0.26.ebuild,
  +files/razerd.init.d-r2, metadata.xml:
  Version bump. Frontends switched to Python 3.x only

*razercfg-0.25 (20 Apr 2014)

  20 Apr 2014; Christian Birchinger <joker@gentoo.org> +razercfg-0.25.ebuild:
  Version bump

*razercfg-0.24 (01 Apr 2014)

  01 Apr 2014; Christian Birchinger <joker@gentoo.org> +razercfg-0.24.ebuild:
  Version bump. Systemd unit file path fixed.

  23 Feb 2014; Christian Birchinger <joker@gentoo.org> -razercfg-0.22.ebuild:
  Remove old version

*razercfg-0.23 (23 Feb 2014)

  23 Feb 2014; Christian Birchinger <joker@gentoo.org> +razercfg-0.23.ebuild:
  Version bump

  10 Jan 2014; Christian Birchinger <joker@gentoo.org> -razercfg-0.18.ebuild,
  -razercfg-0.19.ebuild:
  Remove old versions

*razercfg-0.22-r1 (08 Jan 2014)

  08 Jan 2014; Christian Birchinger <joker@gentoo.org>
  +razercfg-0.22-r1.ebuild:
  Force Python 2.x because the included scripts don't support Python 3.x

*razercfg-0.22 (03 Jan 2014)

  03 Jan 2014; Christian Birchinger <joker@gentoo.org> +razercfg-0.22.ebuild,
  +files/razerd.init.d-r1:
  Version bump. New version installs the systemd unit file by default.

*razercfg-0.21 (31 Jul 2013)
