@@ -23,25 +23,25 @@ EBUILD razercfg-0.24.ebuild 1644 SHA256 00616130392a030c1271c61d26e55c21bfed2ea6
 EBUILD razercfg-0.25.ebuild 1470 SHA256 608fc2f5d1ff136b3b4e10169915412d93b9a1aff1d841c15480592dc2a018c2 SHA512 5722f75b9ce9d4a9eeb287a2b99540044950fe8a0e247827349f1799eca993250d29f1a7f1f21b9e39facb3f0186946a1c97c73821418692e50483b04be092fc WHIRLPOOL a90a0ccfb1ccf12306216cc2edef66906568930a8efd05b5feabd30f4da3069e8c6609603722b7c4a6b7e27e470ca78aa79ecf649c1a6eaf36d5dbc59d1453aa
 EBUILD razercfg-0.26.ebuild 1917 SHA256 a0c929a2fa234a47f73a3d95848694298499f0a2cd78cc39124697b360a596a8 SHA512 e8142ef37be2c81644a0e7d055cc7c6cf331fec34d9485a47e059fd1137dc7d767af190c33f8df1f21bab4b94658b1fc97468432c422a1539e6735747c2404c1 WHIRLPOOL cb390295f4713e8e03f540a45c1ffd635faa46b20b9b12cd54fe8e09242bc6a1df58bfa9f1e242db7dd5e7cd5328b53b75baac45944f0b3d7ccbfb35605408af
 EBUILD razercfg-0.29.ebuild 1912 SHA256 d3e72a8c43b6b03b1fa7e24d5af2a65b23fb1b766b80a9d1a46793a11b6c4aef SHA512 52bcf0b89117bfaccfe8bee78f0237234f46883d0c36e91bafbb0f9bddbbff4950821e0cc86135b9020f35c4c5e62207d4c028d3cb771d75f259320fbbca78b8 WHIRLPOOL d9184ec6e012b506d89946471789bb1e655a2bb5e5fca72ff97a6f7735343f41043b1a99f581c99a3c409511bf1f09ecbe81ad29f58fc19ccc845a0927ca2c23
-EBUILD razercfg-0.30.ebuild 1912 SHA256 38952da6d31ad4289cdf141bf2a9d89bab8076a127bf55b4615b7fc66f1c25fa SHA512 d14ac90303f106cc3a5fdaf7c04b48e0e44ac7f29bb996c42bdc8707e4cb66720af33427e3653734241b1811f5f5088d06ba831956ecce943621e94ea004c25e WHIRLPOOL 36f735c37265c2e956749900e8c3d4ab988b638c87fc04bd012ebe805c26d419cd376eaeaf52ddafbfafb6475dde92dac13b684da63afa1b4a37f90745a79bf1
-MISC ChangeLog 4548 SHA256 ff5d918c659db2b9b7a29af47552b43c05551c592ad426226c98c1ba3ae0bbe9 SHA512 b6a824ebbfbcdb82ed3c02db2d2a9dbc7f8fb16af8ad00d261a54ed96c4d1587be8202b0b890f06db267bc08e15e02753ef7d98683bf08f31cc3a10787e69d23 WHIRLPOOL 13dc96d27e0feb8b92379e1c7863b2bdbe35f04c3b9f0e95e13b0ffb272c1e5477baf01465610e6c4767acca7bd32495cafd3df9acddb3b60b69e1856ca4e829
+EBUILD razercfg-0.30.ebuild 1948 SHA256 fa8d9ca9146f0035f533d370b03c4ed4cfead81f4ad6b8db6f50dae6d3a36ee1 SHA512 be89de4043385cc8f61ab7a2b9708288f97944c416ad92e1989b532bb92504e366b7d0f4951d9276eb0cd6f530a91a8b2ea6f6b6288b619575ba6b717bb9bec0 WHIRLPOOL f3b9588578fc38eecbbc614dec8e28de64730e185cbd25dc62bfdcb7b4d94b978a3c4b383a692fd6d5a71d7ed6de35edbbcc2facdd948fe702a7609e4a2da726
+MISC ChangeLog 4667 SHA256 a93990f4514fbf50745985af4a47e64cc1bf4c2968dea3c04ed1af5b14be38b2 SHA512 c51fc4d9fd17a3ee5b15ae421aa12e157a8cac1577800d4f672c6bf4479227bfde15b34577aec7705b3a00a9da6692988f2a192e747e5001863113907d7d03ca WHIRLPOOL 053bea4caaa061d39453cf774d9583bd66873db0f1b26a5ad21e11b374f0e89396ff1c9fade8b78605620c6bd91b648dcf4521060cfe410db28a83e1c7037301
 MISC metadata.xml 952 SHA256 7f9afc150d5a533041a43bbe13a3f161dc12eb945ec925ac0a18cd7b00bfd04b SHA512 5a679fb9061a572e4a4c4f33840694d7a7e43601450d297fb30a25aa3e4c3fa1a491476467c10b440f7d7bfde0e67bf6f48c3f74f6f120ddbe7887172ac15a1a WHIRLPOOL d3c2c7f417a216d3bceee8fe1702362e2375d8abbc6b087784525ce147f81523578d32963b58bd01ca4af6d51663b1ca8ab29eb62115ca490c8a8072a6b55515
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJUNnukXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJUSMw/XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0ODVGNzIyN0VCNkRCNUU5MzkzNzY5ODAw
-MTUxODYzQTY3NjUyOTAwAAoJEAFRhjpnZSkALFMP/3l/l1cBC1JDPIc0QkS/zbb/
-xcEg1tSV8Pyrc2u4IkfvQqWsTTjX0ml+WgJIkHXVzqHX2+AUyF9QQxwer8HHQltl
-XcAFfynt/mBJHolPpNCube+0qGbmA8aOi7ytJrtjAJ4utoAzlaOLXCVYc5ZfCgG2
-PiJsixTHtJPAVLa6lzUUiyZkJBtrHYZVISqHUAISdb3AYEDP5s/WQwAuPW2ad4Uz
-2x+UlqgvYwaWiuKts0DyagEAJRedWYu+uVdg6/19y0eJNf5sWDCwtTXNX6tofDSo
-vrcNJ6OStJ1Rixw35Xt+z5xINlGnzEd5UU2ziw4akGzmIVJ3O9NuW3xra4cUtvrj
-dLNOMgVp20c47jVsy2fxuU7oMDX1EREY7QHCBJZfiNWN/qzpB6qcEV8SMudXMJWE
-c9NqvFEgq7MMuh5hPuOL/cRtqmuRigEegl6h4jPNVDO4/REimm/nfIrniU7s1dD4
-+53HCJgx/EY2D9m/cZYOKyb1I4hGnmM2K8dKQPUxzOWksMi4zj/8WpuOJhYrw6iF
-Qc35dBetjDnHJuqg2UqpxWZH9leeN4jNUbLTEmV8bXdh1gA1ujTvcy2EDSKhkmnA
-Jzx/psVWAGfgTWO3WGc5ffIowXtOD9LB/PFNKfM6mtAnQoaBxnI1lqJjFeX0kDIt
-TtI39MU1t1pff3p+orHb
-=z9i/
+MTUxODYzQTY3NjUyOTAwAAoJEAFRhjpnZSkASZAP/0ElZzQ1ydzrec25gKLwkuOZ
+19U0iNgtACwqQyimQB6pJAW6VcRYJLw/NwSAjy4s89+ScGUH/D33ayZRVeRY2wkO
+I7WWhSFjR0DWJCR2S5hwA0bFq77F3j/MiFuRsIp5vy4Fflnhd+Le9cN1vMMYnE2O
+B+FkVglyoXwZCMeT9w3tHPNpQkIE4EREZDLVZ3mpRZBXsSBDJ6aJKw9a4JOb2fTJ
+A/047ifhTB5/hCyLyhbMCrHHxBSivxt54EtO187asAYTEmatAc2hr1nmO2wDe13Q
+D7iAFk5q0V65q/Ve0X8PvCQc77cM+/P/EkXqLNyND/D1/xLv8foOZZ+FIgqTdHSf
+3lnbu/bFI66g4gl41pTWaildSqXbFlbPO9iRtop0culD7MMO8dkiQ7FmqBRxuzwy
+xeguGROetqDd2d1ZY1oIFlUbgpsN5hWUsg9q9e1XVbYanSyvOFSnmocF7LDtIloD
+YeUpH4Edz5D+qfo8zI/NHPgVxsSBxnp9+TxVjjxSr5VDbNjzr+7B+ZTGJTG/4qcp
+X4bdFddeyQWooavZW0RqRDDtwVV6AxhTgET/g5XGUiddQ9KkLvTTafZAqA+DCOyr
+JLMmLc62nkgq1AkNmS64nTriaFHR6r+NR3YKeaU8FWxvRi+2Xc07SpLfKvsvBSIZ
+SCrDiGCSUQGsTP36jcPN
+=5QTh
 -----END PGP SIGNATURE-----
